--- a/Codes/pytorch-starter.ipynb
+++ b/Codes/pytorch-starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "_uuid": "85ee6b26944da2cd972c5038fa63c78b763184d3"
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "_uuid": "5013e3945f2454854337ff3ee7eee98efa79fd25"
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "_uuid": "87a5fb67cdd061388568a1cd27250cecf5fb24a7"
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "_uuid": "9fa4b3016d2edf2c14340de1f23988b086850851"
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "_uuid": "06944041d5cad5617c641b73f513c4840eb502fc"
    },
@@ -281,7 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 85035/1306122 [00:00<00:01, 850346.76it/s]"
+      "  6%|▌         | 78470/1306122 [00:00<00:01, 784698.88it/s]"
      ]
     },
     {
@@ -296,26 +296,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1306122/1306122 [00:01<00:00, 1180473.20it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 1142624.08it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:28<00:00, 46356.77it/s]\n",
-      "100%|██████████| 56370/56370 [00:01<00:00, 47405.57it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:11<00:00, 118191.61it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 123242.54it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:09<00:00, 144025.74it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 145729.36it/s]\n"
+      "100%|██████████| 1306122/1306122 [00:01<00:00, 1098891.88it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 1138239.90it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:27<00:00, 47335.93it/s]\n",
+      "100%|██████████| 56370/56370 [00:01<00:00, 47709.08it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:10<00:00, 119386.22it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 115331.39it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:09<00:00, 140154.32it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 145967.96it/s]\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-997bcfb06f87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtrain_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_and_prec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0membedding_matrix_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_glove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0membedding_matrix_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_para\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-3e7d2e3b8b2c>\u001b[0m in \u001b[0;36mload_glove\u001b[0;34m(word_index)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mword_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mmax_features\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0membedding_vector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeddings_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0membedding_vector\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0membedding_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membedding_vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 5.25 minutes\n",
+      "(120000, 300)\n"
      ]
     }
    ],
@@ -327,17 +323,19 @@
     "\n",
     "train_X, test_X, train_y, word_index = load_and_prec()\n",
     "embedding_matrix_1 = load_glove(word_index)\n",
-    "embedding_matrix_2 = load_para(word_index)\n",
+    "# embedding_matrix_2 = load_para(word_index)\n",
     "\n",
     "total_time = (time.time() - start_time) / 60\n",
     "print(\"Took {:.2f} minutes\".format(total_time))\n",
     "\n",
-    "embedding_matrix = np.mean([embedding_matrix_1, embedding_matrix_2], axis=0)\n",
+    "# embedding_matrix = np.mean([embedding_matrix_1, embedding_matrix_2], axis=0)\n",
+    "embedding_matrix = embedding_matrix_1\n",
+    "\n",
     "# embedding_matrix = np.concatenate((embedding_matrix_1, embedding_matrix_2), axis=1)\n",
     "print(np.shape(embedding_matrix))\n",
     "\n",
-    "del embedding_matrix_1, embedding_matrix_2\n",
-    "gc.collect()"
+    "# del embedding_matrix_1, embedding_matrix_2\n",
+    "del embedding_matrix_1"
    ]
   },
   {
