--- a/Codes/pytorch-starter.ipynb
+++ b/Codes/pytorch-starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -396,6 +396,10 @@
    },
    "outputs": [],
    "source": [
+    "# embedding ->\n",
+    "# lstm -> lstm_attention ->avg_pool, max_pool\n",
+    "# gru ->gru_attention\n",
+    "\n",
     "class NeuralNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(NeuralNet, self).__init__()\n",
@@ -596,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7rc2"
   }
  },
  "nbformat": 4,
