--- a/Codes/Model1_3rd solution.ipynb
+++ b/Codes/Model1_3rd solution.ipynb
@@ -1,6 +1,328 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import time\n",
+    "import gc\n",
+    "import random\n",
+    "import os\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "from sklearn.metrics import f1_score, roc_auc_score\n",
+    "\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.utils.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seed_torch(seed=1029):\n",
+    "    random.seed(seed)\n",
+    "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_size = 300 # how big is each word vector\n",
+    "max_features = 120000 # how many unique words to use (i.e num rows in embedding vector)\n",
+    "maxlen = 72 # max number of words in a question to use\n",
+    "\n",
+    "batch_size = 1536\n",
+    "train_epochs = 8\n",
+    "\n",
+    "SEED = 1029"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puncts = [',', '.', '\"', ':', ')', '(', '-', '!', '?', '|', ';', \"'\", '$', '&', '/', '[', ']', '>', '%', '=', '#', '*', '+', '\\\\', '•',  '~', '@', '£', \n",
+    " '·', '_', '{', '}', '©', '^', '®', '`',  '<', '→', '°', '€', '™', '›',  '♥', '←', '×', '§', '″', '′', 'Â', '█', '½', 'à', '…', \n",
+    " '“', '★', '”', '–', '●', 'â', '►', '−', '¢', '²', '¬', '░', '¶', '↑', '±', '¿', '▾', '═', '¦', '║', '―', '¥', '▓', '—', '‹', '─', \n",
+    " '▒', '：', '¼', '⊕', '▼', '▪', '†', '■', '’', '▀', '¨', '▄', '♫', '☆', 'é', '¯', '♦', '¤', '▲', 'è', '¸', '¾', 'Ã', '⋅', '‘', '∞', \n",
+    " '∙', '）', '↓', '、', '│', '（', '»', '，', '♪', '╩', '╚', '³', '・', '╦', '╣', '╔', '╗', '▬', '❤', 'ï', 'Ø', '¹', '≤', '‡', '√', ]\n",
+    "\n",
+    "def clean_text(x):\n",
+    "    x = str(x)\n",
+    "    for punct in puncts:\n",
+    "        x = x.replace(punct, f' {punct} ')\n",
+    "    return x\n",
+    "\n",
+    "def clean_numbers(x):\n",
+    "    x = re.sub('[0-9]{5,}', '#####', x)\n",
+    "    x = re.sub('[0-9]{4}', '####', x)\n",
+    "    x = re.sub('[0-9]{3}', '###', x)\n",
+    "    x = re.sub('[0-9]{2}', '##', x)\n",
+    "    return x\n",
+    "\n",
+    "mispell_dict = {\"aren't\" : \"are not\",\n",
+    "\"can't\" : \"cannot\",\n",
+    "\"couldn't\" : \"could not\",\n",
+    "\"didn't\" : \"did not\",\n",
+    "\"doesn't\" : \"does not\",\n",
+    "\"don't\" : \"do not\",\n",
+    "\"hadn't\" : \"had not\",\n",
+    "\"hasn't\" : \"has not\",\n",
+    "\"haven't\" : \"have not\",\n",
+    "\"he'd\" : \"he would\",\n",
+    "\"he'll\" : \"he will\",\n",
+    "\"he's\" : \"he is\",\n",
+    "\"i'd\" : \"I would\",\n",
+    "\"i'd\" : \"I had\",\n",
+    "\"i'll\" : \"I will\",\n",
+    "\"i'm\" : \"I am\",\n",
+    "\"isn't\" : \"is not\",\n",
+    "\"it's\" : \"it is\",\n",
+    "\"it'll\":\"it will\",\n",
+    "\"i've\" : \"I have\",\n",
+    "\"let's\" : \"let us\",\n",
+    "\"mightn't\" : \"might not\",\n",
+    "\"mustn't\" : \"must not\",\n",
+    "\"shan't\" : \"shall not\",\n",
+    "\"she'd\" : \"she would\",\n",
+    "\"she'll\" : \"she will\",\n",
+    "\"she's\" : \"she is\",\n",
+    "\"shouldn't\" : \"should not\",\n",
+    "\"that's\" : \"that is\",\n",
+    "\"there's\" : \"there is\",\n",
+    "\"they'd\" : \"they would\",\n",
+    "\"they'll\" : \"they will\",\n",
+    "\"they're\" : \"they are\",\n",
+    "\"they've\" : \"they have\",\n",
+    "\"we'd\" : \"we would\",\n",
+    "\"we're\" : \"we are\",\n",
+    "\"weren't\" : \"were not\",\n",
+    "\"we've\" : \"we have\",\n",
+    "\"what'll\" : \"what will\",\n",
+    "\"what're\" : \"what are\",\n",
+    "\"what's\" : \"what is\",\n",
+    "\"what've\" : \"what have\",\n",
+    "\"where's\" : \"where is\",\n",
+    "\"who'd\" : \"who would\",\n",
+    "\"who'll\" : \"who will\",\n",
+    "\"who're\" : \"who are\",\n",
+    "\"who's\" : \"who is\",\n",
+    "\"who've\" : \"who have\",\n",
+    "\"won't\" : \"will not\",\n",
+    "\"wouldn't\" : \"would not\",\n",
+    "\"you'd\" : \"you would\",\n",
+    "\"you'll\" : \"you will\",\n",
+    "\"you're\" : \"you are\",\n",
+    "\"you've\" : \"you have\",\n",
+    "\"'re\": \" are\",\n",
+    "\"wasn't\": \"was not\",\n",
+    "\"we'll\":\" will\",\n",
+    "\"didn't\": \"did not\",\n",
+    "\"tryin'\":\"trying\"}\n",
+    "\n",
+    "def _get_mispell(mispell_dict):\n",
+    "    mispell_re = re.compile('(%s)' % '|'.join(mispell_dict.keys()))\n",
+    "    return mispell_dict, mispell_re\n",
+    "\n",
+    "mispellings, mispellings_re = _get_mispell(mispell_dict)\n",
+    "def replace_typical_misspell(text):\n",
+    "    def replace(match):\n",
+    "        return mispellings[match.group(0)]\n",
+    "    return mispellings_re.sub(replace, text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_and_prec():\n",
+    "    train_df = pd.read_csv(\"../input/train.csv\")\n",
+    "    test_df = pd.read_csv(\"../input/test.csv\")\n",
+    "    print(\"Train shape : \",train_df.shape)\n",
+    "    print(\"Test shape : \",test_df.shape)\n",
+    "    \n",
+    "    # lower\n",
+    "    train_df[\"question_text\"] = train_df[\"question_text\"].progress_apply(lambda x: x.lower())\n",
+    "    test_df[\"question_text\"] = test_df[\"question_text\"].progress_apply(lambda x: x.lower())\n",
+    "    \n",
+    "    # Clean the text\n",
+    "    train_df[\"question_text\"] = train_df[\"question_text\"].progress_apply(lambda x: clean_text(x))\n",
+    "    test_df[\"question_text\"] = test_df[\"question_text\"].progress_apply(lambda x: clean_text(x))\n",
+    "    \n",
+    "    # Clean numbers\n",
+    "    train_df[\"question_text\"] = train_df[\"question_text\"].progress_apply(lambda x: clean_numbers(x))\n",
+    "    test_df[\"question_text\"] = test_df[\"question_text\"].progress_apply(lambda x: clean_numbers(x))\n",
+    "    \n",
+    "    # Clean speelings\n",
+    "    train_df[\"question_text\"] = train_df[\"question_text\"].progress_apply(lambda x: replace_typical_misspell(x))\n",
+    "    test_df[\"question_text\"] = test_df[\"question_text\"].progress_apply(lambda x: replace_typical_misspell(x))\n",
+    "    \n",
+    "    ## fill up the missing values\n",
+    "    train_X = train_df[\"question_text\"].fillna(\"_##_\").values\n",
+    "    test_X = test_df[\"question_text\"].fillna(\"_##_\").values\n",
+    "\n",
+    "    ## Tokenize the sentences\n",
+    "    tokenizer = Tokenizer(num_words=max_features)\n",
+    "    tokenizer.fit_on_texts(list(train_X))\n",
+    "    train_X = tokenizer.texts_to_sequences(train_X)\n",
+    "    test_X = tokenizer.texts_to_sequences(test_X)\n",
+    "\n",
+    "    ## Pad the sentences \n",
+    "    train_X = pad_sequences(train_X, maxlen=maxlen)\n",
+    "    test_X = pad_sequences(test_X, maxlen=maxlen)\n",
+    "\n",
+    "    ## Get the target values\n",
+    "    train_y = train_df['target'].values\n",
+    "    \n",
+    "    #shuffling the data\n",
+    "    np.random.seed(SEED)\n",
+    "    trn_idx = np.random.permutation(len(train_X))\n",
+    "\n",
+    "    train_X = train_X[trn_idx]\n",
+    "    train_y = train_y[trn_idx]\n",
+    "    \n",
+    "    return train_X, test_X, train_y, tokenizer.word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_glove(word_index):\n",
+    "    EMBEDDING_FILE = '../input/embeddings/glove.840B.300d/glove.840B.300d.txt'\n",
+    "    def get_coefs(word,*arr): return word, np.asarray(arr, dtype='float32')\n",
+    "    embeddings_index = dict(get_coefs(*o.split(\" \")) for o in open(EMBEDDING_FILE))\n",
+    "\n",
+    "    all_embs = np.stack(embeddings_index.values())\n",
+    "    emb_mean,emb_std = all_embs.mean(), all_embs.std()\n",
+    "    embed_size = all_embs.shape[1]\n",
+    "\n",
+    "    # word_index = tokenizer.word_index\n",
+    "    nb_words = min(max_features, len(word_index))\n",
+    "    embedding_matrix = np.random.normal(emb_mean, emb_std, (nb_words, embed_size))\n",
+    "    for word, i in word_index.items():\n",
+    "        if i >= max_features: continue\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "        if embedding_vector is not None: embedding_matrix[i] = embedding_vector\n",
+    "            \n",
+    "    return embedding_matrix \n",
+    "\n",
+    "def load_para(word_index):\n",
+    "    EMBEDDING_FILE = '../input/embeddings/paragram_300_sl999/paragram_300_sl999.txt'\n",
+    "    def get_coefs(word,*arr): return word, np.asarray(arr, dtype='float32')\n",
+    "    embeddings_index = dict(get_coefs(*o.split(\" \")) for o in open(EMBEDDING_FILE, encoding=\"utf8\", errors='ignore') if len(o)>100)\n",
+    "\n",
+    "    all_embs = np.stack(embeddings_index.values())\n",
+    "    emb_mean,emb_std = all_embs.mean(), all_embs.std()\n",
+    "    embed_size = all_embs.shape[1]\n",
+    "\n",
+    "    # word_index = tokenizer.word_index\n",
+    "    nb_words = min(max_features, len(word_index))\n",
+    "    embedding_matrix = np.random.normal(emb_mean, emb_std, (nb_words, embed_size))\n",
+    "    for word, i in word_index.items():\n",
+    "        if i >= max_features: continue\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "        if embedding_vector is not None: embedding_matrix[i] = embedding_vector\n",
+    "    \n",
+    "    return embedding_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 94274/1306122 [00:00<00:01, 942736.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape :  (1306122, 3)\n",
+      "Test shape :  (56370, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1306122/1306122 [00:01<00:00, 1131407.94it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 1134150.33it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:27<00:00, 47590.53it/s]\n",
+      "100%|██████████| 56370/56370 [00:01<00:00, 49835.21it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:10<00:00, 128154.63it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 130502.77it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:08<00:00, 152564.13it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 155331.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 4.34 minutes\n",
+      "(120000, 300)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "train_X, test_X, train_y, word_index = load_and_prec()\n",
+    "embedding_matrix_1 = load_glove(word_index)\n",
+    "# embedding_matrix_2 = load_para(word_index)\n",
+    "\n",
+    "total_time = (time.time() - start_time) / 60\n",
+    "print(\"Took {:.2f} minutes\".format(total_time))\n",
+    "\n",
+    "# embedding_matrix = np.mean([embedding_matrix_1, embedding_matrix_2], axis=0)\n",
+    "embedding_matrix = embedding_matrix_1\n",
+    "\n",
+    "# embedding_matrix = np.concatenate((embedding_matrix_1, embedding_matrix_2), axis=1)\n",
+    "print(np.shape(embedding_matrix))\n",
+    "\n",
+    "# del embedding_matrix_1, embedding_matrix_2\n",
+    "del embedding_matrix_1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,24 +343,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/c/jigsaw-toxic-comment-classification-challenge/discussion/52644\n",
+    "# input shape: (seq_len, batch, input_size)\n",
+    "\n",
     "class NeuralNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(NeuralNet, self).__init__()\n",
     "        \n",
-    "        hidden_size = 60\n",
+    "        hidden_size = 60 # The number of features in the hidden state h\n",
     "        \n",
     "        self.embedding = nn.Embedding(max_features, embed_size)\n",
     "        self.embedding.weight = nn.Parameter(torch.tensor(embedding_matrix, dtype=torch.float32))\n",
     "        self.embedding.weight.requires_grad = False\n",
     "        \n",
     "        self.embedding_dropout = nn.Dropout2d(0.5)\n",
-    "        self.lstm = nn.GRU(embed_size, hidden_size, bidirectional=True, batch_first=True)\n",
-    "        self.gru = nn.GRU(hidden_size*2, hidden_size, bidirectional=True, batch_first=True)\n",
+    "        self.lstm = nn.LSTM(input_size = embed_size, hidden_size = hidden_size, bidirectional=True, batch_first=True)\n",
+    "        self.gru = nn.GRU(input_size = hidden_size*2, hidden_size = hidden_size, bidirectional=True, batch_first=True)\n",
     "        \n",
     "        self.lstm_attention = Attention(hidden_size*2, maxlen)\n",
     "        self.gru_attention = Attention(hidden_size*2, maxlen)\n",
@@ -58,12 +382,12 @@
     "        \n",
     "#       3. Bidirectional LSTM\n",
     "# https://towardsdatascience.com/understanding-bidirectional-rnn-in-pytorch-5bd25a5dd66\n",
-    "        h_lstm, _ = self.lstm(h_embedding)\n",
+    "        h_lstm, _, _ = self.lstm(h_embedding)\n",
+    "#     4. Bidirectional GRU\n",
     "        h_gru, _ = self.gru(h_lstm)\n",
     "        \n",
-    "        h_lstm_atten = self.lstm_attention(h_lstm)\n",
-    "        h_gru_atten = self.gru_attention(h_gru)\n",
-    "        \n",
+    "#       5. A concatenation of the last state, maximum pool, average pool and two features: \n",
+    "#        \"Unique words rate\" and \"Rate of all-caps words\"\n",
     "        avg_pool = torch.mean(h_gru, 1)\n",
     "        max_pool, _ = torch.max(h_gru, 1)\n",
     "        \n",
@@ -73,6 +397,76 @@
     "        out = self.out(conc)\n",
     "        \n",
     "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_preds = np.zeros((len(train_X)))\n",
+    "test_preds = np.zeros((len(test_X)))\n",
+    "\n",
+    "seed_torch(SEED)\n",
+    "\n",
+    "x_test_cuda = torch.tensor(test_X, dtype=torch.long).cuda()\n",
+    "test = torch.utils.data.TensorDataset(x_test_cuda)\n",
+    "test_loader = torch.utils.data.DataLoader(test, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "for i, (train_idx, valid_idx) in enumerate(splits):\n",
+    "    x_train_fold = torch.tensor(train_X[train_idx], dtype=torch.long).cuda()\n",
+    "    y_train_fold = torch.tensor(train_y[train_idx, np.newaxis], dtype=torch.float32).cuda()\n",
+    "    x_val_fold = torch.tensor(train_X[valid_idx], dtype=torch.long).cuda()\n",
+    "    y_val_fold = torch.tensor(train_y[valid_idx, np.newaxis], dtype=torch.float32).cuda()\n",
+    "    \n",
+    "    model = NeuralNet()\n",
+    "    model.cuda()\n",
+    "    \n",
+    "    loss_fn = torch.nn.BCEWithLogitsLoss(reduction=\"sum\")\n",
+    "    optimizer = torch.optim.Adam(model.parameters())\n",
+    "    \n",
+    "    train = torch.utils.data.TensorDataset(x_train_fold, y_train_fold)\n",
+    "    valid = torch.utils.data.TensorDataset(x_val_fold, y_val_fold)\n",
+    "    \n",
+    "    train_loader = torch.utils.data.DataLoader(train, batch_size=batch_size, shuffle=True)\n",
+    "    valid_loader = torch.utils.data.DataLoader(valid, batch_size=batch_size, shuffle=False)\n",
+    "    \n",
+    "    print(f'Fold {i + 1}')\n",
+    "    \n",
+    "    for epoch in range(train_epochs):\n",
+    "        start_time = time.time()\n",
+    "        \n",
+    "        model.train()\n",
+    "        avg_loss = 0.\n",
+    "        for x_batch, y_batch in tqdm(train_loader, disable=True):\n",
+    "            y_pred = model(x_batch)\n",
+    "            loss = loss_fn(y_pred, y_batch)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            avg_loss += loss.item() / len(train_loader)\n",
+    "        \n",
+    "        model.eval()\n",
+    "        valid_preds_fold = np.zeros((x_val_fold.size(0)))\n",
+    "        test_preds_fold = np.zeros(len(test_X))\n",
+    "        avg_val_loss = 0.\n",
+    "        for i, (x_batch, y_batch) in enumerate(valid_loader):\n",
+    "            y_pred = model(x_batch).detach()\n",
+    "            avg_val_loss += loss_fn(y_pred, y_batch).item() / len(valid_loader)\n",
+    "            valid_preds_fold[i * batch_size:(i+1) * batch_size] = sigmoid(y_pred.cpu().numpy())[:, 0]\n",
+    "        \n",
+    "        elapsed_time = time.time() - start_time \n",
+    "        print('Epoch {}/{} \\t loss={:.4f} \\t val_loss={:.4f} \\t time={:.2f}s'.format(\n",
+    "            epoch + 1, train_epochs, avg_loss, avg_val_loss, elapsed_time))\n",
+    "        \n",
+    "    for i, (x_batch,) in enumerate(test_loader):\n",
+    "        y_pred = model(x_batch).detach()\n",
+    "\n",
+    "        test_preds_fold[i * batch_size:(i+1) * batch_size] = sigmoid(y_pred.cpu().numpy())[:, 0]\n",
+    "\n",
+    "    train_preds[valid_idx] = valid_preds_fold\n",
+    "    test_preds += test_preds_fold / len(splits)    "
    ]
   }
  ],
@@ -92,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7rc2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
