--- a/Codes/simple-exploration-notebook-qiqc.ipynb
+++ b/Codes/simple-exploration-notebook-qiqc.ipynb
@@ -1927,7 +1927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7rc2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
