--- a/Codes/Baseline_bidir_lstm_gru.ipynb
+++ b/Codes/Baseline_bidir_lstm_gru.ipynb
@@ -43,7 +43,7 @@
      "text": [
       "\t\tos['CUDA_VISIBLE_DEVICES']     = 0\n",
       "\n",
-      "-------------------- [START 2019-01-18 04:13:20] ---------------------------------------------------\n",
+      "-------------------- [START 2019-01-18 18:00:34] ---------------------------------------------------\n",
       "\n",
       "                          |------ Train ------|------ Valid ------|----Best Results---|------------|\n",
       "mode    iter   epoch    lr|  loss    f1_macro |  loss    f1_macro |  loss    f1_macro | time       |\n",
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 37785/1306122 [00:00<00:03, 377847.66it/s]"
+      "  4%|▎         | 46992/1306122 [00:00<00:02, 469918.21it/s]"
      ]
     },
     {
@@ -104,14 +104,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1306122/1306122 [00:01<00:00, 675736.24it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 605156.72it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:53<00:00, 24567.27it/s]\n",
-      "100%|██████████| 56370/56370 [00:02<00:00, 24551.00it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:16<00:00, 77187.68it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 77506.16it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:18<00:00, 70066.27it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 69142.46it/s]\n"
+      "100%|██████████| 1306122/1306122 [00:01<00:00, 678194.33it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 587139.65it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:53<00:00, 24312.78it/s]\n",
+      "100%|██████████| 56370/56370 [00:02<00:00, 24280.69it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:16<00:00, 78119.17it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 79061.36it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:18<00:00, 71585.93it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 70710.01it/s]\n"
      ]
     },
     {
@@ -150,8 +150,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1\n",
+      "Start loading embedding....................\n",
+      "Embedding matrix shape: (120000, 300)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'utils' has no attribute 'get_learning_rate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-0d6be17e5d97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;31m# train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m         \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_learning_rate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m         train_loss = train(train_loader=train_loader,model=model,loss_fn=loss_fn, optimize=optimizer,\n\u001b[1;32m     49\u001b[0m                            epoch=epoch,valid_loss=valid_loss,start=start_time)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'utils' has no attribute 'get_learning_rate'"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "# -------------------------------------------------------\n",
     "# training\n",
     "# -------------------------------------------------------\n",
@@ -159,28 +181,24 @@
     "test_preds = np.zeros((len(test_X)))\n",
     "\n",
     "x_test_cuda = torch.tensor(test_X, dtype=torch.long).cuda()\n",
-    "test = torch.utils.data.TensorDataset(x_test_cuda)\n",
-    "test_loader = torch.utils.data.DataLoader(test, batch_size=config.batch_size, shuffle=False)\n",
+    "test_dataset = torch.utils.data.TensorDataset(x_test_cuda)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=config.batch_size, shuffle=False)\n",
     "\n",
-    "splits = list(StratifiedKFold(n_splits=5, shuffle=True, random_state=SEED).split(train_X, train_y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start loading embedding....................\n"
-     ]
-    }
-   ],
-   "source": [
+    "splits = list(StratifiedKFold(n_splits=5, shuffle=True, random_state=SEED).split(train_X, train_y))\n",
+    "\n",
     "sigmoid = nn.Sigmoid()\n",
-    "for i, (train_idx, valid_idx) in enumerate(splits):\n",
+    "loss_fn = torch.nn.BCEWithLogitsLoss(reduction=\"sum\")\n",
+    "\n",
+    "# k-fold\n",
+    "for fold, (train_idx, valid_idx) in enumerate(splits):\n",
+    "    print(f'Fold {fold + 1}')\n",
+    "\n",
+    "    # tflogger\n",
+    "    tflogger = utils.TFLogger(os.path.join('results', 'TFlogs',\n",
+    "                                     config.model_name + \"_fold{0}_{1}\".format(config.fold, fold)))\n",
+    "    # initialize the early_stopping object\n",
+    "    early_stopping = utils.EarlyStopping(patience=7, verbose=True)\n",
+    "\n",
     "    x_train_fold = torch.tensor(train_X[train_idx], dtype=torch.long).cuda()\n",
     "    y_train_fold = torch.tensor(train_y[train_idx, np.newaxis], dtype=torch.float32).cuda()\n",
     "    x_val_fold = torch.tensor(train_X[valid_idx], dtype=torch.long).cuda()\n",
@@ -189,53 +207,79 @@
     "    model = Baseline_Bidir_LSTM_GRU(config, word_index)\n",
     "    model.cuda()\n",
     "\n",
-    "    loss_fn = torch.nn.BCEWithLogitsLoss(reduction=\"sum\")\n",
-    "    optimizer = torch.optim.Adam(model.parameters())\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=config.lr)\n",
     "\n",
-    "    train = torch.utils.data.TensorDataset(x_train_fold, y_train_fold)\n",
-    "    valid = torch.utils.data.TensorDataset(x_val_fold, y_val_fold)\n",
+    "    train_dataset = torch.utils.data.TensorDataset(x_train_fold, y_train_fold)\n",
+    "    valid_dataset = torch.utils.data.TensorDataset(x_val_fold, y_val_fold)\n",
     "\n",
-    "    train_loader = torch.utils.data.DataLoader(train, batch_size=config.batch_size, shuffle=True)\n",
-    "    valid_loader = torch.utils.data.DataLoader(valid, batch_size=config.batch_size, shuffle=False)\n",
+    "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=config.batch_size, shuffle=True)\n",
+    "    valid_loader = torch.utils.data.DataLoader(valid_dataset, batch_size=config.batch_size, shuffle=False)\n",
     "\n",
-    "    print(f'Fold {i + 1}')\n",
-    "\n",
+    "    valid_loss = np.inf\n",
+    "    start_time = time.time()\n",
     "    for epoch in range(config.epochs):\n",
-    "        start_time = time.time()\n",
+    "        # train\n",
+    "        lr = utils.get_learning_rate(optimizer)\n",
+    "        train_loss = train(train_loader=train_loader,model=model,loss_fn=loss_fn, optimize=optimizer,\n",
+    "                           epoch=epoch,valid_loss=valid_loss,start=start_time)\n",
     "\n",
-    "        model.train()\n",
-    "        avg_loss = 0.\n",
-    "        for x_batch, y_batch in tqdm(train_loader, disable=True):\n",
-    "            y_pred = model(x_batch)\n",
-    "            loss = loss_fn(y_pred, y_batch)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            avg_loss += loss.item() / len(train_loader)\n",
-    "\n",
-    "        model.eval()\n",
-    "        valid_preds_fold = np.zeros((x_val_fold.size(0)))\n",
-    "        test_preds_fold = np.zeros(len(test_X))\n",
-    "        avg_val_loss = 0.\n",
-    "        \n",
     "        # validate\n",
-    "        for i, (x_batch, y_batch) in enumerate(valid_loader):\n",
-    "            y_pred = model(x_batch).detach()\n",
-    "            avg_val_loss += loss_fn(y_pred, y_batch).item() / len(valid_loader)\n",
-    "            valid_preds_fold[i * config.batch_size:(i + 1) * config.batch_size] = sigmoid(y_pred).cpu().numpy()[:, 0]\n",
+    "        valid_loss = evaluate(val_loader=valid_loader, model=model, loss_fn=loss_fn, epoch=epoch,\n",
+    "                            train_loss=train_loss, start_time=start_time)\n",
+    "        test_preds_fold = np.zeros(len(test_X))\n",
     "\n",
-    "        elapsed_time = time.time() - start_time\n",
-    "        print('Epoch {}/{} \\t loss={:.4f} \\t val_loss={:.4f} \\t time={:.2f}s'.format(\n",
-    "            epoch + 1, config.epochs, avg_loss, avg_val_loss, elapsed_time))\n",
+    "        # save model\n",
+    "        utils.save_checkpoint({\n",
+    "            \"epoch\": epoch,\n",
+    "            \"model_name\": config.model_name,\n",
+    "            \"state_dict\": model.state_dict(),\n",
+    "            \"optimizer\": optimizer.state_dict(),\n",
+    "            \"fold\": config.fold,\n",
+    "            \"kfold\": config.fold,\n",
+    "        },config.fold, fold, config)\n",
+    "        # print logs\n",
+    "        print('\\r', end='', flush=True)\n",
     "\n",
-    "    # test    \n",
-    "    for i, (x_batch,) in enumerate(test_loader):\n",
-    "        y_pred = model(x_batch).detach()\n",
+    "        log.write(\"\\n\")\n",
+    "        time.sleep(0.01)\n",
     "\n",
-    "        test_preds_fold[i * config.batch_size:(i + 1) * config.batch_size] =  sigmoid(y_pred).cpu().numpy()[:, 0]\n",
+    "        # ================================================================== #\n",
+    "        #                        Tensorboard Logging                         #\n",
+    "        # ================================================================== #\n",
     "\n",
-    "    train_preds[valid_idx] = valid_preds_fold\n",
-    "    test_preds += test_preds_fold / len(splits)"
+    "        # 1. Log scalar values (scalar summary)\n",
+    "        info = {'Train_loss': train_loss,\n",
+    "                'Valid_loss': valid_loss,\n",
+    "                'Learnging_rate': lr}\n",
+    "\n",
+    "        for tag, value in info.items():\n",
+    "            tflogger.scalar_summary(tag, value, epoch)\n",
+    "\n",
+    "        # 2. Log values and gradients of the parameters (histogram summary)\n",
+    "        for tag, value in model.named_parameters():\n",
+    "            tag = tag.replace('.', '/')\n",
+    "            tflogger.histo_summary(tag, value.data.cpu().numpy(), epoch)\n",
+    "            tflogger.histo_summary(tag + '/grad', value.grad.data.cpu().numpy(), epoch)\n",
+    "        # -------------------------------------\n",
+    "        # end tflogger\n",
+    "\n",
+    "        # ================================================================== #\n",
+    "        #                        Early stopping                         #\n",
+    "        # ================================================================== #\n",
+    "        # early_stopping needs the validation loss to check if it has decresed,\n",
+    "        # and if it has, it will make a checkpoint of the current model\n",
+    "        early_stopping(valid_loss, model)\n",
+    "\n",
+    "        if early_stopping.early_stop:\n",
+    "            print(\"Early stopping\")\n",
+    "            break\n",
+    "\n",
+    "    # end looping all epochs\n",
+    "\n",
+    "    # test\n",
+    "    test_preds_fold = test(test_loader=test_loader, model=model)\n",
+    "    test_preds += test_preds_fold / len(splits)\n",
+    "    # end k-fold"
    ]
   },
   {
@@ -293,6 +337,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7rc2"
   }
  },
  "nbformat": 4,
