--- a/Codes/Baseline_bidir_lstm_gru.ipynb
+++ b/Codes/Baseline_bidir_lstm_gru.ipynb
@@ -2,23 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module://ipykernel.pylab.backend_inline\n",
-      "@common.py:  \n",
-      "\tset random seed\n",
-      "\t\tSEED=35202\n",
-      "\tset cuda environment\n",
-      "\t\ttorch.__version__              = 1.0.0\n",
-      "\t\ttorch.version.cuda             = 9.0.176\n",
-      "\t\ttorch.backends.cudnn.version() = 7401\n",
-      "\t\ttorch.cuda.device_count()      = 1\n",
-      "\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of utils failed: Traceback (most recent call last):\n",
+      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 244, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 376, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/imp.py\", line 315, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/home/lawson901225/kaggle/Quora/Codes/utils.py\", line 52\n",
+      "    return lr\n",
+      "            ^\n",
+      "SyntaxError: 'return' outside function\n",
+      "]\n"
      ]
     }
    ],
