--- a/Codes/Baseline_bidir_lstm_gru.ipynb
+++ b/Codes/Baseline_bidir_lstm_gru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -11,31 +11,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of utils failed: Traceback (most recent call last):\n",
-      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 244, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 376, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/imp.py\", line 315, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"/home/lawson901225/tensorflow/envPy36/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"/home/lawson901225/kaggle/Quora/Codes/utils.py\", line 52\n",
-      "    return lr\n",
-      "            ^\n",
-      "SyntaxError: 'return' outside function\n",
-      "]\n"
      ]
     }
    ],
@@ -46,7 +21,8 @@
     "from common import *\n",
     "from config import *\n",
     "import utils\n",
-    "from models.model import*"
+    "from models.model import*\n",
+    "from sklearn.metrics import f1_score, roc_auc_score"
    ]
   },
   {
@@ -60,7 +36,7 @@
      "text": [
       "\t\tos['CUDA_VISIBLE_DEVICES']     = 0\n",
       "\n",
-      "-------------------- [START 2019-01-18 18:00:34] ---------------------------------------------------\n",
+      "-------------------- [START 2019-01-18 18:53:52] ---------------------------------------------------\n",
       "\n",
       "                          |------ Train ------|------ Valid ------|----Best Results---|------------|\n",
       "mode    iter   epoch    lr|  loss    f1_macro |  loss    f1_macro |  loss    f1_macro | time       |\n",
@@ -106,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▎         | 46992/1306122 [00:00<00:02, 469918.21it/s]"
+      "  7%|▋         | 88310/1306122 [00:00<00:03, 319194.72it/s]"
      ]
     },
     {
@@ -121,14 +97,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1306122/1306122 [00:01<00:00, 678194.33it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 587139.65it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:53<00:00, 24312.78it/s]\n",
-      "100%|██████████| 56370/56370 [00:02<00:00, 24280.69it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:16<00:00, 78119.17it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 79061.36it/s]\n",
-      "100%|██████████| 1306122/1306122 [00:18<00:00, 71585.93it/s]\n",
-      "100%|██████████| 56370/56370 [00:00<00:00, 70710.01it/s]\n"
+      "100%|██████████| 1306122/1306122 [00:01<00:00, 670783.91it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 594071.96it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:53<00:00, 24206.32it/s]\n",
+      "100%|██████████| 56370/56370 [00:02<00:00, 24599.86it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:16<00:00, 77024.20it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 77525.62it/s]\n",
+      "100%|██████████| 1306122/1306122 [00:18<00:00, 72054.69it/s]\n",
+      "100%|██████████| 56370/56370 [00:00<00:00, 70781.54it/s]\n"
      ]
     },
     {
@@ -137,7 +113,7 @@
      "text": [
       "Tokenizing.......\n",
       "Tokenizing Done!\n",
-      "Took 2.80 minutes\n"
+      "Took 2.82 minutes\n"
      ]
     }
    ],
@@ -165,7 +141,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(train_loader,model,loss_fn, optimizer,epoch,valid_loss,start):\n",
+    "    losses = utils.AverageMeter()\n",
+    "    model.train()\n",
+    "\n",
+    "    for i, (x_batch, y_batch) in enumerate(train_loader):\n",
+    "        y_pred = model(x_batch)\n",
+    "        loss = loss_fn(y_pred, y_batch)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        losses.update(loss.item(),x_batch.size(0))\n",
+    "\n",
+    "        print('\\r', end='', flush=True)\n",
+    "        message = '%s %5.1f %6.1f        |  %0.3f  |   %0.3f   | %s' % ( \\\n",
+    "            \"train\", i / len(train_loader) + epoch, epoch,\n",
+    "            losses.avg,\n",
+    "            valid_loss,\n",
+    "            utils.time_to_str((timer() - start), 'min'))\n",
+    "        print(message, end='', flush=True)\n",
+    "    log.write(\"\\n\")\n",
+    "    return losses.avg\n",
+    "\n",
+    "\n",
+    "# 2. evaluate fuunction\n",
+    "def evaluate(val_loader,model,loss_fn,epoch,train_loss,start_time):\n",
+    "    losses = utils.AverageMeter()\n",
+    "    # switch mode for evaluation\n",
+    "    model.cuda()\n",
+    "    model.eval()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for i, (x_batch, y_batch) in enumerate(val_loader):\n",
+    "            y_pred = model(x_batch)\n",
+    "            # Concatenate all every batch\n",
+    "            if i == 0:\n",
+    "                total_output = y_pred\n",
+    "                total_target = y_batch\n",
+    "            else:\n",
+    "                total_output = torch.cat([total_output, y_pred], 0)\n",
+    "                total_target = torch.cat([total_target, y_batch], 0)\n",
+    "\n",
+    "        # compute loss for the entire evaluation dataset\n",
+    "        print(\"total_output:\", total_output.shape)\n",
+    "        print(\"total_target:\", total_target.shape)\n",
+    "        \n",
+    "        val_loss = loss_fn(total_output, total_target)\n",
+    "        losses.update(val_loss.item(),total_target.shape[0])\n",
+    "        \n",
+    "        print('\\r', end='', flush=True)\n",
+    "        message = '%s %5.1f %6.1f        |  %0.3f  |   %0.3f   | %s' % ( \\\n",
+    "            \"val\", epoch, epoch,\n",
+    "            train_loss,\n",
+    "            losses.avg,\n",
+    "            utils.time_to_str((timer() - start_time), 'min'))\n",
+    "        print(message, end='', flush=True)\n",
+    "\n",
+    "        log.write(\"\\n\")\n",
+    "\n",
+    "    return losses.avg, sigmoid(total_output).cpu().data.numpy()[:, 0]\n",
+    "\n",
+    "# 3. test model on public dataset and save the probability matrix\n",
+    "def test(test_loader,model):\n",
+    "    model.cuda()\n",
+    "    model.eval()\n",
+    "    predictions = []\n",
+    "    sigmoid = nn.Sigmoid()\n",
+    "    with torch.no_grad():\n",
+    "        for i, (x_batch,) in enumerate(test_loader):\n",
+    "            y_pred = model(x_batch)\n",
+    "            y_preds = sigmoid(y_pred).cpu().data.numpy()[:, 0]\n",
+    "            for y_pred in y_preds:\n",
+    "                predictions.append(y_pred)\n",
+    "    return np.array(predictions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -174,18 +232,49 @@
      "text": [
       "Fold 1\n",
       "Start loading embedding....................\n",
-      "Embedding matrix shape: (120000, 300)\n"
+      "Embedding matrix shape: (120000, 300)\n",
+      "train   1.0    0.0        |  290.292  |   inf   |  0 hr 02 minn\n",
+      "val   0.0    0.0        |  290.292  |   34084.180   |  0 hr 02 min\n",
+      "\n",
+      "train   2.0    1.0        |  263.108  |   34084.180   |  0 hr 04 min\n",
+      "val   1.0    1.0        |  263.108  |   37739.531   |  0 hr 04 min\n",
+      "\n",
+      "EarlyStopping counter: 1 out of 7\n",
+      "train   3.0    2.0        |  258.640  |   37739.531   |  0 hr 07 min\n",
+      "val   2.0    2.0        |  258.640  |   33526.477   |  0 hr 07 min\n",
+      "\n",
+      "Validation loss decreased (inf --> 33526.476562) ...\n",
+      "train   4.0    3.0        |  255.557  |   33526.477   |  0 hr 09 min\n",
+      "val   3.0    3.0        |  255.557  |   33423.453   |  0 hr 09 min\n",
+      "\n",
+      "Validation loss decreased (33526.476562 --> 33423.453125) ...\n",
+      "train   5.0    4.0        |  253.059  |   33423.453   |  0 hr 12 min\n",
+      "val   4.0    4.0        |  253.059  |   31765.967   |  0 hr 12 min\n",
+      "\n",
+      "Validation loss decreased (33423.453125 --> 31765.966797) ...\n",
+      "train   6.0    5.0        |  250.388  |   31765.967   |  0 hr 14 min\n",
+      "val   5.0    5.0        |  250.388  |   31314.385   |  0 hr 14 min\n",
+      "\n",
+      "Validation loss decreased (31765.966797 --> 31314.384766) ...\n",
+      "train   7.0    6.0        |  248.541  |   31314.385   |  0 hr 16 min\n",
+      "val   6.0    6.0        |  248.541  |   38762.523   |  0 hr 17 min\n",
+      "\n",
+      "EarlyStopping counter: 1 out of 7\n",
+      "train   8.0    7.0        |  245.652  |   38762.523   |  0 hr 19 min\n",
+      "val   7.0    7.0        |  245.652  |   35862.047   |  0 hr 19 min\n",
+      "\n",
+      "EarlyStopping counter: 2 out of 7\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'utils' has no attribute 'get_learning_rate'",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'list' and 'int'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-0d6be17e5d97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;31m# train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m         \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_learning_rate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m         train_loss = train(train_loader=train_loader,model=model,loss_fn=loss_fn, optimize=optimizer,\n\u001b[1;32m     49\u001b[0m                            epoch=epoch,valid_loss=valid_loss,start=start_time)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'utils' has no attribute 'get_learning_rate'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-fd130309cae3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;31m# test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0mtest_preds_fold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m     \u001b[0mtest_preds\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtest_preds_fold\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m     \u001b[0;31m# end k-fold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'int'"
      ]
     }
    ],
@@ -199,7 +288,7 @@
     "\n",
     "x_test_cuda = torch.tensor(test_X, dtype=torch.long).cuda()\n",
     "test_dataset = torch.utils.data.TensorDataset(x_test_cuda)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=config.batch_size, shuffle=False)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
     "\n",
     "splits = list(StratifiedKFold(n_splits=5, shuffle=True, random_state=SEED).split(train_X, train_y))\n",
     "\n",
@@ -233,16 +322,16 @@
     "    valid_loader = torch.utils.data.DataLoader(valid_dataset, batch_size=config.batch_size, shuffle=False)\n",
     "\n",
     "    valid_loss = np.inf\n",
-    "    start_time = time.time()\n",
+    "    start_time = timer()\n",
     "    for epoch in range(config.epochs):\n",
     "        # train\n",
     "        lr = utils.get_learning_rate(optimizer)\n",
-    "        train_loss = train(train_loader=train_loader,model=model,loss_fn=loss_fn, optimize=optimizer,\n",
+    "        train_loss = train(train_loader=train_loader,model=model,loss_fn=loss_fn, optimizer=optimizer,\n",
     "                           epoch=epoch,valid_loss=valid_loss,start=start_time)\n",
     "\n",
     "        # validate\n",
-    "        valid_loss = evaluate(val_loader=valid_loader, model=model, loss_fn=loss_fn, epoch=epoch,\n",
-    "                            train_loss=train_loss, start_time=start_time)\n",
+    "        valid_loss, valid_output = evaluate(val_loader=valid_loader, model=model, loss_fn=loss_fn, epoch=epoch,\n",
+    "                                            train_loss=train_loss, start_time=start_time)\n",
     "        test_preds_fold = np.zeros(len(test_X))\n",
     "\n",
     "        # save model\n",
@@ -276,7 +365,8 @@
     "        for tag, value in model.named_parameters():\n",
     "            tag = tag.replace('.', '/')\n",
     "            tflogger.histo_summary(tag, value.data.cpu().numpy(), epoch)\n",
-    "            tflogger.histo_summary(tag + '/grad', value.grad.data.cpu().numpy(), epoch)\n",
+    "            if not value.grad is None:\n",
+    "                tflogger.histo_summary(tag + '/grad', value.grad.data.cpu().numpy(), epoch)\n",
     "        # -------------------------------------\n",
     "        # end tflogger\n",
     "\n",
@@ -292,7 +382,7 @@
     "            break\n",
     "\n",
     "    # end looping all epochs\n",
-    "\n",
+    "    train_preds[valid_idx] = valid_output\n",
     "    # test\n",
     "    test_preds_fold = test(test_loader=test_loader, model=model)\n",
     "    test_preds += test_preds_fold / len(splits)\n",
@@ -301,44 +391,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=config.batch_size, shuffle=False)\n",
+    "test_preds_fold = test(test_loader=test_loader, model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def threshold_search(y_true, y_proba):\n",
+    "    best_threshold = 0\n",
+    "    best_score = 0\n",
+    "    for threshold in tqdm([i * 0.01 for i in range(100)]):\n",
+    "        score = f1_score(y_true=y_true, y_pred=y_proba > threshold)\n",
+    "        if score > best_score:\n",
+    "            best_threshold = threshold\n",
+    "            best_score = score\n",
+    "    search_result = {'threshold': best_threshold, 'f1': best_score}\n",
+    "    return search_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:22<00:00,  4.41it/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(1536,)"
+       "{'threshold': 0.02, 'f1': 0.25143919619551613}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = nn.Sigmoid()\n",
-    "m(y_pred).cpu().numpy()[:,0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-b1c71175a0a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
-     ]
-    }
-   ],
-   "source": [
-    "torch.nn.Sigmoid([[0]])"
+    "search_result = threshold_search(train_y, train_preds)\n",
+    "search_result"
    ]
   },
   {
@@ -346,7 +450,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sub = pd.read_csv('../input/sample_submission.csv')\n",
+    "sub.prediction = test_preds > search_result['threshold']\n",
+    "sub.to_csv(\"submission.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
